# Sumplete

./: .gitignore  LICENSE  README.md  Taskfile.yaml  alembic.ini  pyproject.toml
docker/: Dockerfile  compose.yaml  container-compose.yaml
locales/en/: main.ftl
locales/ru/: main.ftl
new_src/sumplete/adapters/database/: factory.py
new_src/sumplete/adapters/redis/: factory.py
new_src/sumplete/common/: factory.py
new_src/sumplete/common/builder/: url.py
new_src/sumplete/common/config/: loader.py  schemas.py
new_src/sumplete/common/di/: setup.py
new_src/sumplete/domain/: constants.py  factory.py
new_src/sumplete/domain/base/: schema.py  usecase.py
new_src/sumplete/domain/game/: schema.py  usecase.py
new_src/sumplete/domain/mode/: schema.py
new_src/sumplete/domain/settings/: schemas.py
new_src/sumplete/domain/setup/: schemas.py
new_src/sumplete/domain/user/: usecase.py
new_src/sumplete/presentation/telegram/: __main__.py  factory.py
settings/: .secrets.toml  settings.toml
src/core/puzzle/: constants.py  generate.py  packers.py
src/domain/: constants.py  factory.py
src/domain/dto/: base.py  puzzle.py  user.py
src/domain/entities/: game.py  menu.py
src/domain/usecases/: base.py  user.py
src/infrastructure/database/: factory.py
src/infrastructure/database/alembic/: env.py
src/infrastructure/database/interfaces/: user.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/redis/: factory.py
src/main/: builders.py
src/main/config/: factory.py  loader.py  models.py
src/main/di/: setup.py
src/presentation/tgbot/: __main__.py  factory.py  setup.py
src/sumplete/application/: factory.py
src/sumplete/common/: factory.py  logger.py
src/sumplete/domain/: constants.py  factory.py
(+152 files in other folders)
